--- a/Project1/index.html
+++ b/Project1/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    <h1> Do I work? </h1>
-    <h2> What about this? </h2>
+    <div class="container">
+        <header></header>
+
+        <nav></nav>
+
+        <main></main>
+
+        <footer></footer>
+    </div>
 </body>
 </html>
