--- a/Project1/index.html
+++ b/Project1/index.html
@@ -14,7 +14,14 @@
             <img src="images/logo-adare-restaurant.png" alt="Logo for Adare Restaurant">
         </header>
 
-        <nav></nav>
+        <nav>
+            <a href="#">HOME</a>
+            <a href="#">MENU</a>
+            <a href="#">ORDER ONLINE</a>
+            <a href="#">GIFT VOUCHER</a>
+            <a href="#">CATERING</a>
+            <a href="#">CONTACT</a>
+        </nav>
 
         <main>
             <h1>let's meat</h1>
@@ -22,7 +29,9 @@
             <a href="#">MAKE RESERVATION</a>
         </main>
 
-        <footer></footer>
+        <footer>
+            <p>Main St, Blackabbey, Adare, Co. Limerick - Copyright 2017©</p>
+        </footer>
     </div>
 </body>
 </html>
